[package]
name = "icmp-socket2"
description = "ICMP sockets for both IPv4 and IPv6. Fork of icmp-socket"
version = "0.4.2"
repository = "https://github.com/Lochnair/icmp-socket2"
authors = [
    "Jeremy Wall <jeremy@marzhillstudios.com>",
    "Nils Andreas Svee <me@lochnair.net>",
]
edition = "2024"
license = "Apache-2.0"

[dependencies.socket2]
version = "0.6"
features = ["all"]
